dropdown and scroll nav

--- a/parallax.html
+++ b/parallax.html
@@ -93,6 +93,8 @@
                     layer.style.transform = `translate(${x}px, ${y}px)`
                 })
         }
+
+        parallax();
     </script>
 </body>
 
