--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
 <body>
     <ol>
-        <li><a href="/scrollSpy.html">滚屏</a></li>
         <li><a href="/parallax.html">视差</a></li>
+        <li><a href="/dropdown.html">折叠Dropdown</a></li>
+        <li><a href="/scrollSpy.html">滚屏</a></li>
+        <li><a href="/scrollNav.html">滚动导航</a></li>
     </ol>
 </body>
 
