--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="/dropdown.html">折叠Dropdown</a></li>
         <li><a href="/scrollSpy.html">滚屏</a></li>
         <li><a href="/scrollNav.html">滚动导航</a></li>
+        <li><a href="/login.html">登录表单提升</a></li>
     </ol>
 </body>
 
