--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
     <ol>
         <li><a href="/parallax.html">视差</a></li>
-        <li><a href="/dropdown.html">折叠Dropdown</a></li>
-        <li><a href="/scrollSpy.html">滚屏</a></li>
+        <li><a href="/dropdown.html">折叠下拉按钮</a></li>
+        <li><a href="/scrollSpy.html">锚点滚屏</a></li>
         <li><a href="/scrollNav.html">滚动导航</a></li>
-        <li><a href="/login.html">登录表单提升</a></li>
+        <li><a href="/login.html">登录表单</a></li>
+        <li><a href="/scrollDown.html">下拉动画</a></li>
+        <li><a href="/skewBorderBox.html">扭曲变色边框盒子</a></li>
     </ol>
 </body>
 
