--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="/login.html">登录表单</a></li>
         <li><a href="/scrollDown.html">下拉动画</a></li>
         <li><a href="/skewBorderBox.html">扭曲变色边框盒子</a></li>
+        <li><a href="/toggle.html">切换图片/背景文字</a></li>
     </ol>
 </body>
 
