--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
 <body>
     <ol>
-        <li><a href="/parallax.html">视差</a></li>
-        <li><a href="/dropdown.html">折叠下拉按钮</a></li>
-        <li><a href="/scrollSpy.html">锚点滚屏</a></li>
-        <li><a href="/scrollNav.html">滚动导航</a></li>
-        <li><a href="/login.html">登录表单</a></li>
-        <li><a href="/scrollDown.html">下拉动画</a></li>
-        <li><a href="/skewBorderBox.html">扭曲变色边框盒子</a></li>
-        <li><a href="/toggle.html">切换图片/背景文字</a></li>
+        <li><a href="./parallax.html">视差</a></li>
+        <li><a href="./dropdown.html">折叠下拉按钮</a></li>
+        <li><a href="./scrollSpy.html">锚点滚屏</a></li>
+        <li><a href="./scrollNav.html">滚动导航</a></li>
+        <li><a href="./login.html">登录表单</a></li>
+        <li><a href="./scrollDown.html">下拉动画</a></li>
+        <li><a href="./skewBorderBox.html">扭曲变色边框盒子</a></li>
+        <li><a href="./toggle.html">切换图片/背景文字</a></li>
     </ol>
 </body>
 
