--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <li><a href="./scrollDown.html">下拉动画</a></li>
         <li><a href="./skewBorderBox.html">扭曲变色边框盒子</a></li>
         <li><a href="./toggle.html">切换图片/背景文字</a></li>
+        <li><a href="./street.html">街灯</a></li>
+        <li><a href="./wave.html">波浪线</a></li>
+        <li><a href="./loading1.html">loading 1</a></li>
     </ol>
 </body>
 
