--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         <li><a href="./street.html">街灯</a></li>
         <li><a href="./wave.html">波浪线</a></li>
         <li><a href="./loading1.html">loading 1</a></li>
+        <li><a href="./3DflapImg.html">3D翻转图片</a></li>
+        <li><a href="./lazeLoading.html">懒加载图片</a></li>
+        <li><a href="./animate.html">动画滑动</a></li>
+        <li><a href="./box.html">box</a></li>
+        <li><a href="./shoe.html">shoe</a></li>
+        <li><a href="./glassButton.html">glass botton</a></li>
     </ol>
 </body>
 
