--- a/wave.html
+++ b/wave.html
@@ -28,7 +28,7 @@
         }
 
         #wave path {
-            fill: #fff;
+            fill: rgba(255, 255, 255, 1);
         }
 
         section {
@@ -44,10 +44,11 @@
 
 <body>
     <header>
+
         <svg id='wave' viewBox="0 0 1600 156" xmlns="http://www.w3.org/2000/svg">
-            <path fill="white"
+            <path
                 d="M 1600 164.648 V 66.4428 C 1600 66.4428 1198.64 30.0805 758.025 33.6272 C 317.412 37.1743 0 43.9593 0 43.9593 V 164.648 H 1600 Z">
-                <animate repeatCount="indefinite" fill="freeze" attributeName="d" dur="6s" values="M1600 156V73.5801C1600 73.5801 1279 -53.8561 800 26.7048C321 107.266 0 3.82945 0 3.82945V156H1600Z;
+                <animate repeatCount="indefinite" attributeName="d" dur="6s" values="M1600 156V73.5801C1600 73.5801 1279 -53.8561 800 26.7048C321 107.266 0 3.82945 0 3.82945V156H1600Z;
                 M1600 157V80.5802C1600 80.5802 1202 105 800 27.7048C398 -49.5902 0 64.8295 0 64.8295V157H1600Z;
                 M1600 180.106V53.6857C1600 53.6857 1055 180.106 683 46.0001C311 -88.1054 0 115.686 0 115.686V180.106H1600Z;
                 M1600 156V73.5801C1600 73.5801 1279 -53.8561 800 26.7048C321 107.266 0 3.82945 0 3.82945V156H1600Z
