--- a/parallax.html
+++ b/parallax.html
@@ -73,11 +73,11 @@
 <body>
     <section>
         <div class="bg">
-            <img src="./img/bg-garden.jpg" data-speed='-2'>
+            <img src="/css3-amazing/bg-garden.jpg" data-speed='-2'>
         </div>
-        <img class="bg1" src="./img/sgzt.png" data-speed='4'>
-        <img class="bg2" src="./img/let.png" data-speed='-4'>
-        <img class="beauty" src="./img/beauty.png" data-speed='2'>
+        <img class="bg1" src="/css3-amazing/sgzt.png" data-speed='4'>
+        <img class="bg2" src="/css3-amazing/let.png" data-speed='-4'>
+        <img class="beauty" src="/css3-amazing/beauty.png" data-speed='2'>
     </section>
 
     <script>
