--- a/shoe.html
+++ b/shoe.html
@@ -142,7 +142,7 @@
 <body>
     <div class="container">
         <div class="imgBx">
-            <img src="./img/shoe.png" alt="">
+            <img src="/css3-amazing/shoe.png" alt="">
         </div>
         <div class="details">
             <div class="content">
