--- a/wave.html
+++ b/wave.html
@@ -15,7 +15,7 @@
 
         header {
             position: relative;
-            background: url('./img/beach.jpg');
+            background: url('/css3-amazing/beach.jpg');
             background-size: cover;
             width: 100%;
             height: 100vh;
