Revert "img url"
This reverts commit 8fa9048fdf1d0766a1ccefe99f4618f6b7391695.

--- a/lazeLoading.html
+++ b/lazeLoading.html
@@ -47,25 +47,25 @@
 <body>
     <section>
         <div class="card">
-            <img data-src='/css3-amazing/sun1.jpg'>
+            <img data-src='./img/sun1.jpg'>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ducimus velit omnis quisquam, laudantium
                 ipsa quam impedit eligendi id corporis aliquam nulla autem at quod atque laborum? Modi, quasi laborum?
             </p>
         </div>
         <div class="card">
-            <img data-src='/css3-amazing/sun2.jpg'>
+            <img data-src='./img/sun2.jpg'>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ducimus velit omnis quisquam, laudantium
                 ipsa quam impedit eligendi id corporis aliquam nulla autem at quod atque laborum? Modi, quasi laborum?
             </p>
         </div>
         <div class="card">
-            <img data-src='/css3-amazing/sun3.jpg'>
+            <img data-src='./img/sun3.jpg'>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ducimus velit omnis quisquam, laudantium
                 ipsa quam impedit eligendi id corporis aliquam nulla autem at quod atque laborum? Modi, quasi laborum?
             </p>
         </div>
         <div class="card">
-            <img data-src='/css3-amazing/sun4.jpg'>
+            <img data-src='./img/sun4.jpg'>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ducimus velit omnis quisquam, laudantium
                 ipsa quam impedit eligendi id corporis aliquam nulla autem at quod atque laborum? Modi, quasi laborum?
             </p>
