--- a/3DflapImg.html
+++ b/3DflapImg.html
@@ -39,7 +39,7 @@
         }
 
         .container .box.box1 span {
-            background: url('/css3-amazing/car.jpg');
+            background: url('./img/car.jpg');
             transform-origin: top;
         }
 
@@ -48,7 +48,7 @@
         }
 
         .container .box.box2 span {
-            background: url('/css3-amazing/dress.jpg');
+            background: url('./img/dress.jpg');
             transform-origin: bottom;
             transform: rotateX(90deg) translateY(50%);
         }
