--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
             padding: 0;
             width: 100%;
             height: 100vh;
-            background: url('/css3-amazing/bg.jpg') no-repeat;
+            background: url('./img/bg.jpg') no-repeat;
             background-size: cover;
             display: flex;
             justify-content: center;
