--- a/index.html
+++ b/index.html
@@ -10,23 +10,27 @@
 
 <body>
     <ol>
-        <li><a href="./parallax.html">视差</a></li>
-        <li><a href="./dropdown.html">折叠下拉按钮</a></li>
-        <li><a href="./scrollSpy.html">锚点滚屏</a></li>
-        <li><a href="./scrollNav.html">滚动导航</a></li>
-        <li><a href="./login.html">登录表单</a></li>
-        <li><a href="./scrollDown.html">下拉动画</a></li>
-        <li><a href="./skewBorderBox.html">扭曲变色边框盒子</a></li>
-        <li><a href="./toggle.html">切换图片/背景文字</a></li>
-        <li><a href="./street.html">街灯</a></li>
-        <li><a href="./wave.html">波浪线</a></li>
+        <li><a href="./parallax.html">parallax</a></li>
+        <li><a href="./dropdown.html">dropdown</a></li>
+        <li><a href="./scrollSpy.html">scroll spy</a></li>
+        <li><a href="./scrollNav.html">scroll nav</a></li>
+        <li><a href="./animate.html">scroll animate</a></li>
+        <li><a href="./scrollDown.html">scroll down</a></li>
+        <li><a href="./login.html">login form</a></li>
+        <li><a href="./skewBorderBox.html">skew border box</a></li>
+        <li><a href="./toggle.html">toggle button</a></li>
+        <li><a href="./street.html">spot</a></li>
         <li><a href="./loading1.html">loading 1</a></li>
-        <li><a href="./3DflapImg.html">3D翻转图片</a></li>
-        <li><a href="./lazeLoading.html">懒加载图片</a></li>
-        <li><a href="./animate.html">动画滑动</a></li>
+        <li><a href="./3DflapImg.html">3d flap image</a></li>
+        <li><a href="./lazeLoading.html">laze loading</a></li>
         <li><a href="./box.html">box</a></li>
         <li><a href="./shoe.html">shoe</a></li>
         <li><a href="./glassButton.html">glass botton</a></li>
+        <li><a href="./wave.html">wave header</a></li>
+        <li><a href="./curvedHeader.html">curved header</a></li>
+        <li><a href="./slider.html">slider</a></li>
+        <li><a href="./checkbox-day-night.html">checkbox day night</a></li>
+        <li><a href="./powerSwitch.html">power switch</a></li>
     </ol>
 </body>
 
