--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <ol>
         <li><a href="./parallax.html">parallax</a></li>
+        <li><a href="./parallax-scroll.html">parallax scroll</a></li>
         <li><a href="./dropdown.html">dropdown</a></li>
         <li><a href="./scrollSpy.html">scroll spy</a></li>
         <li><a href="./scrollNav.html">scroll nav</a></li>
@@ -29,6 +30,7 @@
         <li><a href="./wave.html">wave header</a></li>
         <li><a href="./curvedHeader.html">curved header</a></li>
         <li><a href="./slider.html">slider</a></li>
+        <li><a href="./hover-long-image.html">hover-long-image</a></li>
         <li><a href="./checkbox-day-night.html">checkbox day night</a></li>
         <li><a href="./powerSwitch.html">power switch</a></li>
     </ol>
