--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="./toggle.html">toggle button</a></li>
         <li><a href="./street.html">spot</a></li>
         <li><a href="./loading1.html">loading 1</a></li>
+        <li><a href="./loading2.html">loading 2</a></li>
         <li><a href="./3DflapImg.html">3d flap image</a></li>
         <li><a href="./lazeLoading.html">laze loading</a></li>
         <li><a href="./box.html">box</a></li>
@@ -32,7 +33,13 @@
         <li><a href="./slider.html">slider</a></li>
         <li><a href="./hover-long-image.html">hover-long-image</a></li>
         <li><a href="./checkbox-day-night.html">checkbox day night</a></li>
-        <li><a href="./powerSwitch.html">power switch</a></li>
+        <li><a href="./button-power.html">power switch</a></li>
+        <li><a href="./button-hover.html">bottom hover</a></li>
+        <li><a href="./button-hover-2.html">bottom hover 2</a></li>
+        <li><a href="./button-hover-3.html">bottom hover 3</a></li>
+        <li><a href="./image-gallery.html">image-gallery</a></li>
+        <li><a href="./counter.html">counter</a></li>
+        <li><a href="./typing.html">typing</a></li>
     </ol>
 </body>
 
