--- a/button-power.html
+++ b/button-power.html
@@ -70,9 +70,9 @@
             box-shadow: 0 3px 4px rgba(0, 0, 0, 1),
                 inset 0 -2px 5px rgba(0, 0, 0, 1),
                 inset 0 2px 2px rgba(255, 255, 255, 0.5),
-                0 0 0 2px #00a1ff,
-                0 0 0 5px #00a1ff,
-                0 0 0 5.5px #00a1ff;
+                0 0 0.3rem #00a1ff,
+                0 0 1.2rem #00ffe7,
+                0 0 2.5rem #00ffe7;
         }
 
     </style>
