--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="./street.html">spot</a></li>
         <li><a href="./loading1.html">loading 1</a></li>
         <li><a href="./loading2.html">loading 2</a></li>
+        <li><a href="./loading-plane.html">loading-plane</a></li>
         <li><a href="./3DflapImg.html">3d flap image</a></li>
         <li><a href="./lazeLoading.html">laze loading</a></li>
         <li><a href="./box.html">box</a></li>
@@ -40,6 +41,7 @@
         <li><a href="./image-gallery.html">image-gallery</a></li>
         <li><a href="./counter.html">counter</a></li>
         <li><a href="./typing.html">typing</a></li>
+        <li><a href="./layered-image.html">layered image</a></li>
     </ol>
 </body>
 
