--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="./street.html">spot</a></li>
         <li><a href="./loading1.html">loading 1</a></li>
         <li><a href="./loading2.html">loading 2</a></li>
+        <li><a href="./loading-circle.html">loading circle</a></li>
         <li><a href="./loading-plane.html">loading-plane</a></li>
         <li><a href="./3DflapImg.html">3d flap image</a></li>
         <li><a href="./lazeLoading.html">laze loading</a></li>
@@ -40,8 +41,11 @@
         <li><a href="./button-hover-3.html">bottom hover 3</a></li>
         <li><a href="./image-gallery.html">image-gallery</a></li>
         <li><a href="./counter.html">counter</a></li>
-        <li><a href="./typing.html">typing</a></li>
+        <li><a href="./typing.html">text-typing</a></li>
+        <li><a href="./text-shadow.html">text-shadow</a></li>
         <li><a href="./layered-image.html">layered image</a></li>
+        <li><a href="./linear-gradient.html">linear gradient</a></li>
+        <li><a href="./image-distortion.html">image-distortion</a></li>
     </ol>
 </body>
 
