--- a/image/hover-long-image.html
+++ b/image/hover-long-image.html
@@ -28,12 +28,12 @@
         }
 
         div:nth-child(1) {
-            background: url('./img/long1.png');
+            background: url('../img/long1.png');
             background-size: cover;
         }
 
         div:nth-child(2) {
-            background: url('./img/long2.jpg');
+            background: url('../img/long2.jpg');
             background-size: cover;
         }
 
