--- a/index.html
+++ b/index.html
@@ -6,47 +6,142 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>index</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            min-height: 100vh;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            padding: 2rem 0;
+        }
+
+        section {
+            width: 18%;
+            box-sizing: border-box;
+            padding: 2rem;
+            margin: 1rem 0;
+            background: #ccc;
+            line-height: 2;
+        }
+
+        h3 {
+            letter-spacing: .15rem;
+        }
+
+        ol {
+            margin-top: 1rem;
+        }
+
+    </style>
+
 </head>
 
+
+
 <body>
-    <ol>
-        <li><a href="./parallax.html">parallax</a></li>
-        <li><a href="./parallax-scroll.html">parallax scroll</a></li>
-        <li><a href="./dropdown.html">dropdown</a></li>
-        <li><a href="./scrollSpy.html">scroll spy</a></li>
-        <li><a href="./scrollNav.html">scroll nav</a></li>
-        <li><a href="./animate.html">scroll animate</a></li>
-        <li><a href="./scrollDown.html">scroll down</a></li>
-        <li><a href="./login.html">login form</a></li>
-        <li><a href="./skewBorderBox.html">skew border box</a></li>
-        <li><a href="./toggle.html">toggle button</a></li>
-        <li><a href="./street.html">spot</a></li>
-        <li><a href="./loading1.html">loading 1</a></li>
-        <li><a href="./loading2.html">loading 2</a></li>
-        <li><a href="./loading-circle.html">loading circle</a></li>
-        <li><a href="./loading-plane.html">loading-plane</a></li>
-        <li><a href="./3DflapImg.html">3d flap image</a></li>
-        <li><a href="./lazeLoading.html">laze loading</a></li>
-        <li><a href="./box.html">box</a></li>
-        <li><a href="./shoe.html">shoe</a></li>
-        <li><a href="./glassButton.html">glass botton</a></li>
-        <li><a href="./wave.html">wave header</a></li>
-        <li><a href="./curvedHeader.html">curved header</a></li>
-        <li><a href="./slider.html">slider</a></li>
-        <li><a href="./hover-long-image.html">hover-long-image</a></li>
-        <li><a href="./checkbox-day-night.html">checkbox day night</a></li>
-        <li><a href="./button-power.html">power switch</a></li>
-        <li><a href="./button-hover.html">bottom hover</a></li>
-        <li><a href="./button-hover-2.html">bottom hover 2</a></li>
-        <li><a href="./button-hover-3.html">bottom hover 3</a></li>
-        <li><a href="./image-gallery.html">image-gallery</a></li>
-        <li><a href="./counter.html">counter</a></li>
-        <li><a href="./typing.html">text-typing</a></li>
-        <li><a href="./text-shadow.html">text-shadow</a></li>
-        <li><a href="./layered-image.html">layered image</a></li>
-        <li><a href="./linear-gradient.html">linear gradient</a></li>
-        <li><a href="./image-distortion.html">image-distortion</a></li>
-    </ol>
+    <section>
+        <h3>parallax</h3>
+        <ol>
+            <li><a href="./parallax/parallax.html">parallax</a></li>
+            <li><a href="./parallax/parallax-scroll.html">parallax scroll</a></li>
+        </ol>
+    </section>
+
+    <section>
+        <h3>scroll</h3>
+        <ol>
+            <li><a href="./scroll/scrollSpy.html">scroll spy</a></li>
+            <li><a href="./scroll/scrollNav.html">scroll nav</a></li>
+            <li><a href="./scroll/scrollDown.html">scroll down</a></li>
+
+        </ol>
+    </section>
+    <section>
+        <h3>loading</h3>
+        <ol>
+            <li><a href="./loading/loading1.html">loading 1</a></li>
+            <li><a href="./loading/loading2.html">loading 2</a></li>
+            <li><a href="./loading/loading-circle.html">loading circle</a></li>
+            <li><a href="./loading/loading-plane.html">loading-plane</a></li>
+
+        </ol>
+    </section>
+
+    <section>
+        <h3>box</h3>
+        <ol>
+            <li><a href="./box/box.html">box</a></li>
+            <li><a href="./box/shoe.html">shoe</a></li>
+            <li><a href="./box/skewBorderBox.html">skew border box</a></li>
+            <li><a href="./box/image-gallery.html">image-gallery</a></li>
+        </ol>
+    </section>
+
+    <section>
+        <h3>button</h3>
+        <ol>
+            <li><a href="./button/button-power.html">power switch</a></li>
+            <li><a href="./button/button-hover.html">button hover</a></li>
+            <li><a href="./button/button-hover-2.html">button hover 2</a></li>
+            <li><a href="./button/button-hover-3.html">button hover 3</a></li>
+            <li><a href="./button/glassButton.html">glass botton</a></li>
+            <li><a href="./button/dropdown.html">dropdown</a></li>
+            <li><a href="./button/toggle.html">toggle button</a></li>
+            <li><a href="./button/checkbox-day-night.html">checkbox day night</a></li>
+        </ol>
+    </section>
+
+    <section>
+        <h3>animate</h3>
+        <ol>
+            <li><a href="./animate/counter.html">counter</a></li>
+            <li><a href="./animate/animate.html">scroll animate</a></li>
+        </ol>
+    </section>
+
+    <section>
+        <h3>text</h3>
+        <ol>
+            <li><a href="./text/text-typing.html">text-typing</a></li>
+            <li><a href="./text/text-shadow.html">text-shadow</a></li>
+
+        </ol>
+    </section>
+
+    <section>
+        <h3>shape</h3>
+        <ol>
+            <li><a href="./shape/wave.html">wave header</a></li>
+            <li><a href="./shape/curvedHeader.html">curved header</a></li>
+            <li><a href="./shape/triangle.html">triangle</a></li>
+
+        </ol>
+    </section>
+    <section>
+        <h3>image</h3>
+        <ol>
+            <li><a href="./image/hover-long-image.html">hover-long-image</a></li>
+            <li><a href="./image/layered-image.html">layered image</a></li>
+            <li><a href="./image/3DflapImg.html">3d flap image</a></li>
+            <li><a href="./image/slider.html">slider</a></li>
+            <li><a href="./image/image-distortion.html">image-distortion</a></li>
+            <li><a href="./image/lazeLoading.html">laze loading</a></li>
+        </ol>
+    </section>
+    <section>
+        <h3>other</h3>
+        <ol>
+            <li><a href="./other/login.html">login form</a></li>
+            <li><a href="./other/street.html">spot</a></li>
+            <li><a href="./other/linear-gradient.html">linear gradient</a></li>
+        </ol>
+    </section>
+
 </body>
 
 </html>
