--- a/loading/loading-plane.html
+++ b/loading/loading-plane.html
@@ -114,16 +114,16 @@
 
 <body>
     <div class="preload">
-        <img class='plane' src="./img/plane.png" alt="">
+        <img class='plane' src="../img/plane.png" alt="">
         <h3>Landing on the website...</h3>
-        <img class='cloud1' src="./img/cloud.png" alt="">
-        <img class='cloud2' src="./img/cloud.png" alt="">
-        <img class='cloud3' src="./img/cloud.png" alt="">
+        <img class='cloud1' src="../img/cloud.png" alt="">
+        <img class='cloud2' src="../img/cloud.png" alt="">
+        <img class='cloud3' src="../img/cloud.png" alt="">
     </div>
 
     <section>
         <h2>Arrived</h2>
-        <img src="./img/landing.jpg" alt="">
+        <img src="../img/landing.jpg" alt="">
         <button onclick='history.go(0)'>Try Again?</button>
     </section>
 
