--- a/parallax/parallax-scroll.html
+++ b/parallax/parallax-scroll.html
@@ -26,7 +26,7 @@
         }
 
         section:nth-child(1) {
-            background: url('./img/par1.jpg');
+            background: url('../img/par1.jpg');
             background-size: cover;
         }
 
@@ -35,7 +35,7 @@
         }
 
         section:nth-child(3) {
-            background: url('./img/par2.jpg');
+            background: url('../img/par2.jpg');
             background-size: cover;
             background-attachment: fixed;
         }
