--- a/box/box.html
+++ b/box/box.html
@@ -129,7 +129,7 @@
     <section class="container">
         <div class="box">
             <div class="thumb">
-                <img src="./img/box1.jpg" alt="">
+                <img src="../img/box1.jpg" alt="">
             </div>
             <div class="details">
                 <div class="content">
@@ -141,7 +141,7 @@
         </div>
         <div class="box">
             <div class="thumb">
-                <img src="./img/box2.jpg" alt="">
+                <img src="../img/box2.jpg" alt="">
             </div>
             <div class="details">
                 <div class="content">
@@ -153,7 +153,7 @@
         </div>
         <div class="box">
             <div class="thumb">
-                <img src="./img/box3.jpg" alt="">
+                <img src="../img/box3.jpg" alt="">
             </div>
             <div class="details">
                 <div class="content">
@@ -165,7 +165,7 @@
         </div>
         <div class="box">
             <div class="thumb">
-                <img src="./img/box4.jpg" alt="">
+                <img src="../img/box4.jpg" alt="">
             </div>
             <div class="details">
                 <div class="content">
