--- a/box/image-gallery.html
+++ b/box/image-gallery.html
@@ -75,34 +75,34 @@
 <body>
     <section>
         <div>
-            <img src="./img/gallery1.jpg" alt="">
+            <img src="../img/gallery1.jpg" alt="">
         </div>
         <div>
-            <img src="./img/gallery2.jpg" alt="">
+            <img src="../img/gallery2.jpg" alt="">
         </div>
         <div>
-            <img src="./img/gallery3.jpg" alt="">
+            <img src="../img/gallery3.jpg" alt="">
         </div>
         <div>
-            <img src="./img/gallery4.jpg" alt="">
+            <img src="../img/gallery4.jpg" alt="">
         </div>
         <div>
-            <img src="./img/gallery5.jpg" alt="">
+            <img src="../img/gallery5.jpg" alt="">
         </div>
         <div>
-            <img src="./img/gallery6.jpg" alt="">
+            <img src="../img/gallery6.jpg" alt="">
         </div>
         <div>
-            <img src="./img/gallery7.jpg" alt="">
+            <img src="../img/gallery7.jpg" alt="">
         </div>
         <div>
-            <img src="./img/gallery8.jpg" alt="">
+            <img src="../img/gallery8.jpg" alt="">
         </div>
         <div>
-            <img src="./img/gallery9.jpg" alt="">
+            <img src="../img/gallery9.jpg" alt="">
         </div>
         <div>
-            <img src="./img/gallery10.jpg" alt="">
+            <img src="../img/gallery10.jpg" alt="">
         </div>
     </section>
 </body>
