--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
             flex-wrap: wrap;
             justify-content: space-around;
             padding: 2rem 0;
+            list-style: inside;
+            white-space: nowrap;
         }
 
         section {
-            width: 18%;
+            flex: 1;
             box-sizing: border-box;
-            padding: 2rem;
-            margin: 1rem 0;
+            padding: 1rem;
+            margin: 1rem;
             background: #ccc;
             line-height: 2;
         }
@@ -45,32 +47,14 @@
 
 <body>
     <section>
-        <h3>parallax</h3>
+        <h3>animate</h3>
         <ol>
-            <li><a href="./parallax/parallax.html">parallax</a></li>
-            <li><a href="./parallax/parallax-scroll.html">parallax scroll</a></li>
+            <li><a href="./animate/counter.html">counter</a></li>
+            <li><a href="./animate/animate.html">scroll animate</a></li>
         </ol>
     </section>
 
-    <section>
-        <h3>scroll</h3>
-        <ol>
-            <li><a href="./scroll/scrollSpy.html">scroll spy</a></li>
-            <li><a href="./scroll/scrollNav.html">scroll nav</a></li>
-            <li><a href="./scroll/scrollDown.html">scroll down</a></li>
 
-        </ol>
-    </section>
-    <section>
-        <h3>loading</h3>
-        <ol>
-            <li><a href="./loading/loading1.html">loading 1</a></li>
-            <li><a href="./loading/loading2.html">loading 2</a></li>
-            <li><a href="./loading/loading-circle.html">loading circle</a></li>
-            <li><a href="./loading/loading-plane.html">loading-plane</a></li>
-
-        </ol>
-    </section>
 
     <section>
         <h3>box</h3>
@@ -79,6 +63,7 @@
             <li><a href="./box/shoe.html">shoe</a></li>
             <li><a href="./box/skewBorderBox.html">skew border box</a></li>
             <li><a href="./box/image-gallery.html">image-gallery</a></li>
+            <li><a href="./box/cardsHover.html">cardsHover</a></li>
         </ol>
     </section>
 
@@ -96,32 +81,20 @@
         </ol>
     </section>
 
-    <section>
-        <h3>animate</h3>
-        <ol>
-            <li><a href="./animate/counter.html">counter</a></li>
-            <li><a href="./animate/animate.html">scroll animate</a></li>
-        </ol>
-    </section>
 
     <section>
-        <h3>text</h3>
+        <h3>loading</h3>
         <ol>
-            <li><a href="./text/text-typing.html">text-typing</a></li>
-            <li><a href="./text/text-shadow.html">text-shadow</a></li>
+            <li><a href="./loading/loading1.html">loading 1</a></li>
+            <li><a href="./loading/loading2.html">loading 2</a></li>
+            <li><a href="./loading/loading-circle.html">loading circle</a></li>
+            <li><a href="./loading/loading-plane.html">loading-plane</a></li>
+            <li><a href="./loading/loading-ring.html">loading-ring</a></li>
 
         </ol>
     </section>
 
-    <section>
-        <h3>shape</h3>
-        <ol>
-            <li><a href="./shape/wave.html">wave header</a></li>
-            <li><a href="./shape/curvedHeader.html">curved header</a></li>
-            <li><a href="./shape/triangle.html">triangle</a></li>
 
-        </ol>
-    </section>
     <section>
         <h3>image</h3>
         <ol>
@@ -139,6 +112,42 @@
             <li><a href="./other/login.html">login form</a></li>
             <li><a href="./other/street.html">spot</a></li>
             <li><a href="./other/linear-gradient.html">linear gradient</a></li>
+        </ol>
+    </section>
+
+    <section>
+        <h3>parallax</h3>
+        <ol>
+            <li><a href="./parallax/parallax.html">parallax</a></li>
+            <li><a href="./parallax/parallax-scroll.html">parallax scroll</a></li>
+        </ol>
+    </section>
+    <section>
+        <h3>shape</h3>
+        <ol>
+            <li><a href="./shape/wave.html">wave header</a></li>
+            <li><a href="./shape/curvedHeader.html">curved header</a></li>
+            <li><a href="./shape/triangle.html">triangle</a></li>
+
+        </ol>
+    </section>
+    <section>
+        <h3>scroll</h3>
+        <ol>
+            <li><a href="./scroll/scrollSpy.html">scroll spy</a></li>
+            <li><a href="./scroll/scrollNav.html">scroll nav</a></li>
+            <li><a href="./scroll/scrollDown.html">scroll down</a></li>
+
+        </ol>
+    </section>
+
+    <section>
+        <h3>text</h3>
+        <ol>
+            <li><a href="./text/text-typing.html">text-typing</a></li>
+            <li><a href="./text/text-shadow.html">text-shadow</a></li>
+            <li><a href="./text/text-clip.html">text-clip</a></li>
+
         </ol>
     </section>
 
